Basic search implemented using two way binding.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <nav class='navbar navbar-expand navbar-light bg-light'>
   <a class='navbar-brand'>{{pageTitle}}</a>
   <ul class='nav nav-pills'>
-    <li><a class='nav-link' routerLinkActive='active' [routerLink]="['/search']">Search for Products</a></li>
+    <li><a class='nav-link' routerLinkActive='active' [routerLink]="['/search']">Search</a></li>
     <li><a class='nav-link' routerLinkActive='active' [routerLink]="['/login']">login</a></li>
   </ul>
 </nav>
