Search implemented using the Search Service.

--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -7,8 +7,8 @@
   </div>
 
   <div>
-    <div class="row" *ngFor="let product of productsFiltered">
-      <div class="row"> this is a test{{product.productName}}</div>
+    <div class="row" *ngFor="let food of foodsFiltered">
+      <div class="row">this is a test{{food.foodName}}</div>
       <div class="row">this is a test</div>
       <div class="row">this is a test</div>
       <div class="row">this is a test</div>
