--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -1,28 +1,34 @@
 <div class="row">
-  <div class="row">
+    <div class="row">
 
-  <div class="row">
-    <input type="text" [(ngModel)]="listFilter">
-    <button (click)="search()">search</button>
-  </div>
+        <div class="row">
+            <input type="text" [(ngModel)]="listFilter">
+            <button (click)="search()">search</button>
+        </div>
 
-  <div>
-    <div class="row" *ngFor="let food of foodsFiltered">
-      <div class="row">this is a test{{food.foodName}}</div>
-      <div class="row">this is a test</div>
-      <div class="row">this is a test</div>
-      <div class="row">this is a test</div>
+        <div>
+            <div class="row" *ngFor="let food of foodsFiltered">
+                <div class="row">
+                    <div class="col-md-1">
+                        <button (click)="select(food.foodId)" class="btn btn-primary">
+                            select
+                        </button>
+                    </div>
+                    <div class="col-md-11">
+                        <span style="display:inline">  {{food.foodName}}</span>
+                    </div>
+                </div>
+            </div>
+
+            <!--
+            |----------------|
+            | search    send |
+            |----------------|
+            | - item 1 ------|
+            | - item 2 ------|
+            | - item 3 ------|
+            |----------------|
+            -->
+        </div>
     </div>
-  </div>
-
-  <!--
-  |----------------|
-  | search    send |
-  |----------------|
-  | - item 1 ------|
-  | - item 2 ------|
-  | - item 3 ------|
-  |----------------|
-  -->
-  </div>
-  </div>
+</div>
