Search and Cart working completely.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,9 @@
 <nav class='navbar navbar-expand navbar-light bg-light'>
-  <a class='navbar-brand'>{{pageTitle}}</a>
+  <a class='navbar-brand'>&nbsp;{{pageTitle}}</a>
   <ul class='nav nav-pills'>
     <li><a class='nav-link' routerLinkActive='active' [routerLink]="['/search']">Search</a></li>
     <li><a class='nav-link' routerLinkActive='active' [routerLink]="['/login']">login</a></li>
+    <li><a class='nav-link' routerLinkActive='active' [routerLink]="['/cart']">cart</a></li>
   </ul>
 </nav>
 <div class='container'>
