--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -10,7 +10,7 @@
             <div class="row" *ngFor="let food of foodsFiltered">
                 <div class="row">
                     <div class="col-md-1">
-                        <button (click)="select(food.foodId)" class="btn btn-primary">
+                        <button (click)="select(food)" class="btn btn-outline-primary">
                             select
                         </button>
                     </div>
