Checkout and Admin Login components ready.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,8 +2,10 @@
   <a class='navbar-brand'>&nbsp;{{pageTitle}}</a>
   <ul class='nav nav-pills'>
     <li><a class='nav-link' routerLinkActive='active' [routerLink]="['/search']">Search</a></li>
-    <li><a class='nav-link' routerLinkActive='active' [routerLink]="['/login']">login</a></li>
     <li><a class='nav-link' routerLinkActive='active' [routerLink]="['/cart']">cart</a></li>
+    <li><a class='nav-link' routerLinkActive='active' [routerLink]="['/checkout']">checkout</a></li>
+    <li><a class='nav-link' routerLinkActive='active' [routerLink]="['/login']">Admin login</a></li>
+    <li><a class='nav-link' routerLinkActive='active' [routerLink]="['/inventory']">Inventory</a></li>
   </ul>
 </nav>
 <div class='container'>
