--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,1 +1,17 @@
-<p>login works!</p>
+<form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+
+    <div>
+        <label for="username">
+            Username
+        </label>
+        <input type="text" id="username" formControlName="username">
+    </div>
+    <div>
+        <label for="password">
+            Password
+        </label>
+        <input type="text" id="password" formControlName="password">
+    </div>
+
+    <button class="btn" type="submit">login</button>
+</form>
