--- a/src/app/cart/checkout.component.html
+++ b/src/app/cart/checkout.component.html
@@ -1,1 +1,16 @@
-<p>checkout works!</p>
+<form [formGroup]="checkoutForm" (ngSubmit)="onSubmit()">
+
+    <div>
+        <label for="name">name</label>
+        <input type="text" id="name" formControlName="name" type="text">
+    </div>
+    <div>
+        <label for="address">address</label>
+        <input type="text" id="address" formControlName="address" type="text">
+    </div>
+    <button class="button" type="submit">Purchase</button>
+</form>
+<div>{{cartTotal}}</div>
+<div *ngFor="let food of cart">
+    <h2>{{food.foodName}}</h2>
+</div>
