--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,3 +1,11 @@
-body{
+body {
     background-color: darkgrey;
+}
+
+.cell {
+    border: 1px solid red;
+}
+
+.cell-gray {
+    border: 1px solid lightgray;
 }
