--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,20 @@
-<nav class='navbar navbar-expand navbar-light bg-light'>
-  <a class='navbar-brand'>&nbsp;{{pageTitle}}</a>
-  <ul class='nav nav-pills'>
-    <li><a class='nav-link' routerLinkActive='active' [routerLink]="['/search']">Search</a></li>
-    <li><a class='nav-link' routerLinkActive='active' [routerLink]="['/cart']">cart</a></li>
-    <li><a class='nav-link' routerLinkActive='active' [routerLink]="['/checkout']">checkout</a></li>
-    <li><a class='nav-link' routerLinkActive='active' [routerLink]="['/login']">Admin login</a></li>
-    <li><a class='nav-link' routerLinkActive='active' [routerLink]="['/inventory']">Inventory</a></li>
-  </ul>
-</nav>
-<div class='container'>
-  <router-outlet></router-outlet>
+<div class="alert alert-info mb-1 p-1" role="alert">
+    <h1 class='text-center'><span class="badge bg-info">Kitchen<span class="badge bg-warning">Story</span></span></h1>
 </div>
+<div class="row">
+    <div class="col-2">
+        <div aria-orientation="vertical" class="nav flex-column nav-pills" id="v-pills-tab" role="tablist">
+            <a [routerLink]="['/search']" class='nav-link cell-gray' routerLinkActive='active'>Search</a>
+            <a [routerLink]="['/cart']" class='nav-link cell-gray' routerLinkActive='active'>Cart</a>
+            <a [routerLink]="['/checkout']" class='nav-link cell-gray' routerLinkActive='active'>Checkout</a>
+            <a [routerLink]="['/login']" class='nav-link cell-gray' routerLinkActive='active'>Admin login</a>
+            <a [routerLink]="['/inventory']" class='nav-link cell-gray' routerLinkActive='active'>Inventory</a>
+        </div>
+    </div>
+
+
+    <div class="col-10">
+        <router-outlet></router-outlet>
+    </div>
+</div>
+
