--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -1,34 +1,31 @@
-<div class="row">
-    <div class="row">
-
-        <div class="row">
-            <input type="text" [(ngModel)]="listFilter">
-            <button (click)="search()">search</button>
+<div class="card">
+    <div class="card-header">
+        Our Products
+    </div>
+    <div class="card-body">
+        <h5 class="card-title">This is the list of foods we offer.</h5>
+        <p class="card-text">Select the foods you would like to order. When you are done, click the Cart menu to see
+            a list of the items. You can come back to this page to add more items to your cart if
+            you want.</p>
+    </div>
+    <div class="row pb-3 pt-3">
+        <div class="col-4"></div>
+        <div class="col-3 ">
+            <input [(ngModel)]="listFilter" class="form-control" placeholder="Type your food..." type="text">
         </div>
+        <div class="col-4 ps-0 ms-0">
+            <button (click)="search()" class="btn btn-primary">search</button>
 
-        <div>
-            <div class="row" *ngFor="let food of foodsFiltered">
-                <div class="row">
-                    <div class="col-md-1">
-                        <button (click)="select(food)" class="btn btn-outline-primary">
-                            select
-                        </button>
-                    </div>
-                    <div class="col-md-11">
-                        <span style="display:inline">  {{food.foodName}}</span>
-                    </div>
-                </div>
-            </div>
-
-            <!--
-            |----------------|
-            | search    send |
-            |----------------|
-            | - item 1 ------|
-            | - item 2 ------|
-            | - item 3 ------|
-            |----------------|
-            -->
+        </div>
+    </div>
+    <div class="container">
+        <div class="card" style="width: 18rem;">
+            <ul *ngFor="let food of foodsFiltered" class="list-group list-group-flush">
+                <li class="list-group-item">
+                    <button (click)="select(food)" class="btn btn-outline-primary btn-sm">select</button>
+                    &nbsp;{{food.price|currency}}&nbsp;{{food.foodName}}
+                </li>
+            </ul>
         </div>
     </div>
 </div>
