--- a/src/app/cart/checkout.component.html
+++ b/src/app/cart/checkout.component.html
@@ -11,19 +11,27 @@
 
                 <form (ngSubmit)="onSubmit()" [formGroup]="checkoutForm">
 
-                    <div>
-                        <label class="form-label" for="name"></label>
-                        <input class="form-control" formControlName="name" id="name" placeholder="name" type="text"
+                    <div class="mb-2">
+                        <label class="form-label mb-1" for="name">Name</label>
+                        <input class="form-control" formControlName="name" id="name" placeholder="name" type="text">
+                    </div>
+                    <div class="mb-2">
+                        <label class="form-label mb-1" for="address">Address</label>
+                        <input class="form-control" formControlName="address" id="address" placeholder="address"
                                type="text">
                     </div>
-                    <div>
-                        <label class="form-label" for="address"></label>
-                        <input class="form-control" formControlName="address" id="address" placeholder="address"
-                               type="text" type="text">
-                    </div>&nbsp;
+                    <div class="mb-4">
+                        <label class="form-label mb-1" for="credit">Credit Card</label>
+                        <input class="form-control"
+                               formControlName="credit"
+                               id="credit"
+                               placeholder="0000-0000-0000-0000"
+                               type="text">
+                    </div>
 
                     <div>
                         <button class="btn btn-primary" type="submit">Purchase</button>
+                        <img src="assets/images/we_accept.png" width="70%"/>
                     </div>
                 </form>
             </div>
@@ -48,6 +56,14 @@
                 <li class="list-group-item">{{food.price|currency}} {{food.foodName}}</li>
 
             </ul>
+            <!--            <div *ngFor="let food of cart" class="row border rounded p-1">-->
+            <!--                -->
+            <!--                <div class="row">-->
+            <!--                    <div class="col-2 text-center">{{food.foodId}}</div>-->
+            <!--                    <div class="col-8">{{food.foodName}}</div>-->
+            <!--                    <div class="col-2">{{food.price|currency}}</div>-->
+            <!--                </div>-->
+            <!--            </div>-->
         </div>
     </div>
 </div>
