--- a/src/app/inventory/inventory.component.html
+++ b/src/app/inventory/inventory.component.html
@@ -1,8 +1,8 @@
-<div class="card" stxyle="width: 18rem;">
+<div *ngIf="admin==true;else other_content">
     <div class="card-body">
         <div class="row cell">
-            <div class="cell col-1"></div>
-            <div class="cell col-8">
+            <div class="cell col-2"></div>
+            <div class="cell col-7">
                 <div class="row cell bg-light border rounded p-1">
                     <div class="cell col-2 bg-gray"></div>
                     <div class="cell col-1"></div>
@@ -14,10 +14,17 @@
                     <div class="row cell p-2">
                         <div class="cell col-2"></div>
                         <div class="cell col-1"></div>
-                        <div class="cell col-6"><input class="form-control" formControlName="foodName" id="foodName"
+                        <div class="cell col-6"><input class="form-control"
+                                                       formControlName="foodName"
+                                                       id="foodName"
+                                                       placeholder="add a new food..."
                                                        size="25" type="text">
                         </div>
-                        <div class="cell col-2"><input class="form-control" formControlName="price" id="price" size="2"
+                        <div class="cell col-2"><input class="form-control"
+                                                       formControlName="price"
+                                                       id="price"
+                                                       placeholder="0.00"
+                                                       size="2"
                                                        type="text"></div>
                         <div class="cell col-1">
                             <button class="btn btn-primary" type="submit">Save</button>
@@ -36,7 +43,19 @@
                 </div>
 
             </div>
-            <div class="cell col-1"></div>
+            <div class="cell col-3"></div>
         </div>
     </div>
 </div>
+<ng-template #other_content>
+
+    <div class="card">
+        <h5 class="card-header">Not allowed</h5>
+        <div class="card-body">
+            <h5 class="card-title">You need to login first</h5>
+            <p class="card-text">In order to see the inventory and add or delete items, first you must be looged in the
+                application.</p>
+            <a (click)="jumpToLogin()" class="btn btn-primary">Go to Login</a>
+        </div>
+    </div>
+</ng-template>
