--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,40 @@
 <div class="alert alert-info mb-1 p-1" role="alert">
-    <h1 class='text-center'><span class="badge bg-info">Kitchen<span class="badge bg-warning">Story</span></span></h1>
+    <div class="row">
+        <div class="col-4">
+
+        </div>
+        <div class="col-4">
+            <h1 class='text-center'><span class="badge bg-info">Kitchen <span
+                    class="badge bg-warning">Story</span></span></h1>
+
+        </div>
+
+        <div class="col-4 align-middle">
+        <div class="container d-flex justify-content-end">
+            <div class="p-2 align-baseline"><span style="color:#A0A0A0;">Java Full Stack Bootcamp<br/>
+                Gianni Fontanot - Angular</span><div>
+        </div>
+        </div>
+    </div>
 </div>
-<div class="row">
-    <div class="col-2">
+
+<div class="row" style="min-height: 100vh">
+    <div class="col-2 d-flex justify-content-end">
         <div aria-orientation="vertical" class="nav flex-column nav-pills" id="v-pills-tab" role="tablist">
-            <a [routerLink]="['/search']" class='nav-link cell-gray' routerLinkActive='active'>Search</a>
-            <a [routerLink]="['/cart']" class='nav-link cell-gray' routerLinkActive='active'>Cart</a>
-            <a [routerLink]="['/checkout']" class='nav-link cell-gray' routerLinkActive='active'>Checkout</a>
-            <a [routerLink]="['/login']" class='nav-link cell-gray' routerLinkActive='active'>Admin login</a>
-            <a [routerLink]="['/inventory']" class='nav-link cell-gray' routerLinkActive='active'>Inventory</a>
+            <a [routerLink]="['/search']" class='nav-link cell-gray' routerLinkActive='active'>
+                <i aria-hidden="true" class="fa fa-search"></i>&nbsp;&nbsp;Search</a>
+            <a [routerLink]="['/cart']" class='nav-link cell-gray' routerLinkActive='active'>
+                <i aria-hidden="true" class="fa fa-shopping-cart"></i>&nbsp;&nbsp;Cart&nbsp;
+                <!--
+                <span class="badge bg-danger">4</span>
+                -->
+            </a>
+            <a [routerLink]="['/checkout']" class='nav-link cell-gray' routerLinkActive='active'>
+                <i aria-hidden="true" class="fa fa-credit-card"></i>&nbsp;&nbsp;Checkout</a>
+            <a [routerLink]="['/login']" class='nav-link cell-gray' routerLinkActive='active'>
+                <i aria-hidden="true" class="fa fa-sign-in"></i>&nbsp;&nbsp;Admin login</a>
+            <a [routerLink]="['/inventory']" class='nav-link cell-gray' routerLinkActive='active'>
+                <i aria-hidden="true" class="fa fa-list"></i>&nbsp;&nbsp;Inventory</a>
         </div>
     </div>
 
