--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -3,25 +3,37 @@
     <div class="col-6">
         <div class="card">
             <div class="card-header">
-                Shipping
+                Welcome!
             </div>
             <div class="card-body">
                 <h5 class="card-title">Admin Login</h5>
 
                 <form (ngSubmit)="onSubmit()" [formGroup]="loginForm">
-                    <div>
-                        <label class="form-label" for="username"></label>
+                    <div class="mb-3">
+                        <label class="form-label" for="id">ID</label>
+                        <input class="form-control" formControlName="id" id="id" placeholder="ID"
+                               type="text">
+                    </div>
+                    <div class="mb-3">
+                        <label class="form-label" for="username">Username</label>
                         <input class="form-control" formControlName="username" id="username" placeholder="username"
                                type="text">
                     </div>
-                    <div>
-                        <label class="form-label" for="password"></label>
+                    <div class="mb-3">
+                        <label class="form-label" for="password">Password</label>
                         <input class="form-control" formControlName="password" id="password" placeholder="password"
                                type="password">
                     </div>&nbsp;
 
-                    <div>
-                        <button class="btn btn-primary" type="submit">Login</button>
+                    <div class="row">
+                        <div class="col-6 d-flex justify-content-start">
+
+                            <button class="btn btn-primary" type="submit">Login</button>
+                        </div>
+                        <div class="col-6 d-flex justify-content-end">
+                            <button (click)="onChangePassword()" class="btn btn-secondary">Change Password</button>
+
+                        </div>
                     </div>
                 </form>
             </div>
