--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -9,23 +9,37 @@
             you want.</p>
     </div>
     <div class="row pb-3 pt-3">
-        <div class="col-4"></div>
-        <div class="col-3 ">
-            <input [(ngModel)]="listFilter" class="form-control" placeholder="Type your food..." type="text">
+        <div class="col-3"></div>
+        <div class="col-5 ">
+            <input [(ngModel)]="listFilter" class="form-control" placeholder="What are you looking for?" type="text">
         </div>
-        <div class="col-4 ps-0 ms-0">
+        <div class="col-3 ps-0 ms-0">
             <button (click)="search()" class="btn btn-primary">search</button>
 
         </div>
     </div>
     <div class="container">
-        <div class="card" style="width: 18rem;">
-            <ul *ngFor="let food of foodsFiltered" class="list-group list-group-flush">
-                <li class="list-group-item">
-                    <button (click)="select(food)" class="btn btn-outline-primary btn-sm">select</button>
-                    &nbsp;{{food.price|currency}}&nbsp;{{food.foodName}}
-                </li>
-            </ul>
+        <div class="row">
+            <div class="col-2 "></div>
+            <div class="col-7 ">
+                <div class="row bg-light border rounded p-1">
+                    <div class="col-2 bg-gray"></div>
+                    <div class="col-2 text-center">ID</div>
+                    <div class="col-5">Food Name</div>
+                    <div class="col-2">Price</div>
+                    <div class="col-1"></div>
+                </div>
+                <div *ngFor="let food of foodsFiltered" class="row border rounded p-1">
+                    <div class="col-2 bg-gray">
+                        <button (click)="select(food)" class="btn btn-outline-primary btn-sm">select</button>
+                    </div>
+                    <div class="col-2 text-center">{{food.foodId}}</div>
+                    <div class="col-5">{{food.foodName}}</div>
+                    <div class="col-2">{{food.price|currency}}</div>
+                    <div class="col-1"></div>
+                </div>
+            </div>
+            <div class="col-3 "></div>
         </div>
     </div>
 </div>
