--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,16 +4,20 @@
 
         </div>
         <div class="col-4">
-            <h1 class='text-center'><span class="badge bg-info">Kitchen <span
-                    class="badge bg-warning">Story</span></span></h1>
+            <h1 class='text-center'>
+                <span class="badge bg-info">Kitchen
+                    <span class="badge bg-warning">Story</span></span>
+            </h1>
 
         </div>
 
         <div class="col-4 align-middle">
-        <div class="container d-flex justify-content-end">
-            <div class="p-2 align-baseline"><span style="color:#A0A0A0;">Java Full Stack Bootcamp<br/>
-                Gianni Fontanot - Angular</span><div>
-        </div>
+            <div class="container d-flex justify-content-end">
+                <div class="p-2 align-baseline">
+                <span style="color:#A0A0A0;">Java Full Stack Bootcamp<br/>
+                Gianni Fontanot - Angular</span>
+                </div>
+            </div>
         </div>
     </div>
 </div>
