--- a/src/app/cart/checkout.component.html
+++ b/src/app/cart/checkout.component.html
@@ -31,7 +31,7 @@
 
                     <div>
                         <button class="btn btn-primary" type="submit">Purchase</button>
-                        <img src="assets/images/we_accept.png" width="70%"/>
+                        <img alt="credit card" src="assets/images/we_accept.png" width="70%"/>
                     </div>
                 </form>
             </div>
