--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -25,6 +25,8 @@
 <div class="row" style="min-height: 100vh">
     <div class="col-2 d-flex justify-content-end">
         <div aria-orientation="vertical" class="nav flex-column nav-pills" id="v-pills-tab" role="tablist">
+            <a [routerLink]="['/demo']" class='nav-link cell-gray' routerLinkActive='active'>
+                <i aria-hidden="true" class="fa fa-search"></i>&nbsp;&nbsp;DEMO</a>
             <a [routerLink]="['/search']" class='nav-link cell-gray' routerLinkActive='active'>
                 <i aria-hidden="true" class="fa fa-search"></i>&nbsp;&nbsp;Search</a>
             <a [routerLink]="['/cart']" class='nav-link cell-gray' routerLinkActive='active'>
