Corrected URI of the demo image

--- a/src/app/demo/demo.component.html
+++ b/src/app/demo/demo.component.html
@@ -2,4 +2,4 @@
 <p>The backend is simulated using MockAPI.IO, which is being used to GET Kitchen data, but not ready for POST
     requests.</p>
 <p>Next phase for this project is to implement the backend service. It should be ready by the end of September 2022.</p>
-<img alt="image" src="assets/images/sl-kitchen-story.gif">
+<img alt="demo of application" src="assets/images/sl-kitchen-story.gif"/>
